support create a container with a given id
